--- a/aboutus.html
+++ b/aboutus.html
@@ -18,5 +18,6 @@
     </div>
     <h1>Who We Are</h1>
     <p>The McElderry Youth Redemption Boxing Program, re-named Ashley’s Garden in memory of Ashley Long, is a community-based and driven kickboxing program in East Baltimore.  Run by Alex Long, the program targets at risk youth who have suffered gun violence and trauma, offering constructive and healthy alternatives to help children and teens cope with the everyday struggles that plague their community.  As seen in the recently released documentary film CHARM CITY, Ashley’s Garden has been running kickboxing programs for youth over the last three years.  The program currently uses a room at the Safe Streets East Baltimore building to run the training.  We are currently raising funds to rent and retrofit a gym space in the neighborhood that is easily accessible by the youth.  We are also raising funds to buy the youth proper gear for training and competition.</p>
+    <p>I HATE GITHUB</p>
 </body>
 </html>
