got rid of test

--- a/getinvolved.html
+++ b/getinvolved.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>Team Redemptionayyyyy</h1>
+        <h1>Team Redemption</h1>
     </div>
     <div class="topnav">
         <a href="homepage.html">Home</a>
