added title bar and changed css

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
   <div class="header">
-  <div class="button">Get Involved</div>
-  <div class="button">Our People</div>
-  <div class="button">About Us</div>
-  <div class="button">Our Mission</div>
-  <div class="button">Home</div>
+  <a href="getinvolved.html"class="button">Get Involved</a>
+  <a href="ourpeople.html"class="button">Our People</a>
+  <a href="aboutus.html"class="button">About Us</a>
+  <a href="ourmission.html"class="button">Our Mission</a>
+  <a href="homepage.html"class="button">Home</a>
   <div class="redemption">Team Redemption</div>
   </div>
 </body>
