--- a/ourmission.html
+++ b/ourmission.html
@@ -3,19 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Team Redemption</title>
-  <link rel="stylesheet" href="redemption.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="header">
-        <h1>Team Redemption</h1>
-    </div>
-    <div class="topnav">
-        <a href="homepage.html">Home</a>
-        <a href="ourmission.html">Our Mission</a>
-        <a href="aboutus.html">About Us</a>
-        <a href="ourpeople.html">Our People</a>
-        <a href="getinvolved.html">Get Involved</a>
-    </div>
+        <a href="getinvolved.html"class="button">Get Involved</a>
+        <a href="ourpeople.html"class="button">Our People</a>
+        <a href="aboutus.html"class="button">About Us</a>
+        <a href="ourmission.html"class="button">Our Mission</a>
+        <a href="homepage.html"class="button">Home</a>
+        <div class="redemption">Team Redemption</div>
+        </div>
     <p>Our Mission</p>
 </body>
 </html>
