Added content to Get Involved

--- a/getinvolved.html
+++ b/getinvolved.html
@@ -16,6 +16,21 @@
         <a href="ourpeople.html">Our People</a>
         <a href="getinvolved.html">Get Involved</a>
     </div>
-    <p>Get Involved</p>
+    <p>Get Involved
+      <br> 
+      <br>
+      Email:
+      <br>
+      <br>
+      Phone Number:
+      <br>
+      <br>
+      Donate: <a href="https://www.gofundme.com/f/ashley039s-garden-team-redemption">Team Redemption's GoFundMe</a>
+      <br>
+      <br>
+      Location: 2312 East Monument Street
+     <br>
+      Baltimore, MD 21205 
+    </p>
 </body>
 </html>
