--- a/aboutus.html
+++ b/aboutus.html
@@ -12,6 +12,7 @@
         <a href="aboutus.html"class="button">About Us</a>
         <a href="ourmission.html"class="button">Our Mission</a>
         <a href="homepage.html"class="button">Home</a>
+        <a href="views/index.ejs" class="button">DataBase</a>
         <div class="redemption">Team Redemption</div>
         </div>
     <h1>Who We Are</h1>
