--- a/getinvolved.html
+++ b/getinvolved.html
@@ -24,6 +24,7 @@
       <br>
       <br>
       Donate: <a href="https://www.gofundme.com/f/ashley039s-garden-team-redemption">Team Redemption's GoFundMe</a>
+      <div class="gfm-embed" data-url="https://www.gofundme.com/f/ashley039s-garden-team-redemption/widget/large"></div><script defer src="https://www.gofundme.com/static/js/embed.js"></script>
       <br>
       <br>
       Location: 2312 East Monument Street
