--- a/getinvolved.html
+++ b/getinvolved.html
@@ -14,7 +14,7 @@
         <a href="homepage.html"class="button">Home</a>
         <div class="redemption">Team Redemption</div>
         </div>
-    <p>Get Involved
+    <p>Contact Info
       <br> 
       <br>
       Email:
