--- a/homepage.html
+++ b/homepage.html
@@ -14,8 +14,8 @@
         <a href="homepage.html"class="button">Home</a>
         <div class="redemption">Team Redemption</div>
         </div>
-    <h1>Building Community through Boxing</h1>
-    <h2>Strengthening Body and Mind</h2>
+    <h1 class=heading>Building Community through Boxing</h1>
+    <h2 class=subheading>Strengthening Body and Mind</h2>
     <div class="gallery">
         <a target="_blank" href="images/boxing1.jpg">
           <img src="images/boxing1.jpg" alt="Boxing 1" width="600" height="400">
