--- a/ourmission.html
+++ b/ourmission.html
@@ -16,6 +16,6 @@
         <a href="ourpeople.html">Our People</a>
         <a href="getinvolved.html">Get Involved</a>
     </div>
-    <p>Our Mission</p>
+    <p>Our Mission:</p>
 </body>
 </html>
