footer and images

--- a/homepage.html
+++ b/homepage.html
@@ -14,23 +14,24 @@
         <a href="homepage.html"class="button">Home</a>
         <div class="redemption">Team Redemption</div>
         </div>
+    <div class ="row">
+        <div class="column">
+            <img src="images/boxing1.jpg" alt="Boxing 1" style="width:100%">
+        </div>
+        <div class="column">
+            <img src="images/boxing2.jpg" alt="Boxing 1" style="width:100%">
+        </div>
+        <div class="column">
+            <img src="images/boxing3.jpg" alt="Boxing 1" style="width:100%">
+        </div>
+    </div>
+
     <h1 class=heading>Building Community through Boxing</h1>
     <h2 class=subheading>Strengthening Body and Mind</h2>
-    <div class="gallery">
-        <a target="_blank" href="images/boxing1.jpg">
-          <img src="images/boxing1.jpg" alt="Boxing 1" width="600" height="400">
-        </a>
+    <p class=text>The Team Redemption gym, located in east Baltimore, offers local elementary aged children an extracurricular activity through boxing.
+        It teaches the importance of community, strength of body, and strength of mind.</p>
+
+    <div class="footer">
     </div>
-    <div class="gallery">
-        <a target="_blank" href="images/boxing2.jpg">
-          <img src="images/boxing2.jpg" alt="Boxing 1" width="600" height="400">
-        </a>
-    </div>
-    <div class="gallery">
-        <a target="_blank" href="images/boxing3.jpg">
-          <img src="images/boxing3.jpg" alt="Boxing 1" width="600" height="400">
-        </a>
-    </div>
-    <p>The team redemption gym, located in east Baltimore, offers local children an extracurricular activity that teaches community, strength of body, and strength of mind through the sport of boxing.</p>
 </body>
 </html>
