--- a/homepage.html
+++ b/homepage.html
@@ -31,7 +31,7 @@
     <p class=text>The Team Redemption gym, located in east Baltimore, offers local elementary aged children an extracurricular activity through boxing.
         It teaches the importance of community, strength of body, and strength of mind.</p>
 
-    <div class="footer">
-    </div>
+    <!-- <div class="footer">
+    </div> -->
 </body>
 </html>
