--- a/homepage.html
+++ b/homepage.html
@@ -30,8 +30,13 @@
     <h2 class=subheading>Strengthening Body and Mind</h2>
     <p class=text>The Team Redemption gym, located in east Baltimore, offers local elementary aged children an extracurricular activity through boxing.
         It teaches the importance of community, strength of body, and strength of mind.</p>
+    <h3 class=homeright>Donate</h3>
+    <h3 class=homeleft>Contact Us</h3>
+    <p class=homeleft> Phone Number: </p>
+    <p> Email: </p>
+    <p> Address: </p>
 
-    <div class="footer">
-    </div>
+
+
 </body>
 </html>
