--- a/homepage.html
+++ b/homepage.html
@@ -5,7 +5,7 @@
   <title>Team Redemption</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class=back>
     <div class="header">
         <a href="getinvolved.html"class="button">Get Involved</a>
         <a href="ourpeople.html"class="button">Our People</a>
@@ -19,22 +19,38 @@
             <img src="images/boxing1.jpg" alt="Boxing 1" style="width:100%">
         </div>
         <div class="column">
-            <img src="images/boxing2.jpg" alt="Boxing 1" style="width:100%">
+            <img src="images/boxing2.jpg" alt="Boxing 2" style="width:100%">
         </div>
         <div class="column">
-            <img src="images/boxing3.jpg" alt="Boxing 1" style="width:100%">
+            <img src="images/boxing3.jpg" alt="Boxing 3" style="width:100%">
         </div>
     </div>
 
     <h1 class=heading>Building Community through Boxing</h1>
     <h2 class=subheading>Strengthening Body and Mind</h2>
     <p class=text>The Team Redemption gym, located in east Baltimore, offers local elementary aged children an extracurricular activity through boxing.
-        It teaches the importance of community, strength of body, and strength of mind.</p>
-    <h3 class=homeright>Donate</h3>
+        It teaches the importance of community, strength of body, and strength of mind.</p style=>
+
+    
+    <div class ="row">
+        <div class="column">
+            <img src="images/boxing4.jpg" alt="Boxing 4" style="width:100%">
+        </div>
+        <div class="columnextra">
+            <p class=text> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, enim beatae? Distinctio alias, recusandae nobis quod ab quibusdam accusantium. Ipsum, nobis molestias voluptas similique optio beatae consequatur architecto quos fuga.</p>
+        </div>
+        <div class="column">
+            <img src="images/boxing3.jpg" alt="Boxing 3" style="width:100%">
+        </div>
+    </div>
+
     <h3 class=homeleft>Contact Us</h3>
-    <p class=homeleft> Phone Number: </p>
-    <p> Email: </p>
-    <p> Address: </p>
+
+    <ul>
+        <li>Phone Number: </li>
+        <li>Email: </li>
+        <li>Address: </li>
+    </ul>  
 
 
 
