--- a/ourpeople.html
+++ b/ourpeople.html
@@ -14,6 +14,15 @@
         <a href="homepage.html"class="button">Home</a>
         <div class="redemption">Team Redemption</div>
         </div>
-    <p>Our People</p>
+      <h1 class=heading>Name</h1>
+      <div class ="row">
+        <div class="column">
+            <img src="images/boy.jpg" alt="Boxing 4" style="width:100%">
+        </div>
+        <div class="columnextra">
+          <p class=text> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, enim beatae? Distinctio alias, recusandae nobis quod ab quibusdam accusantium. Ipsum, nobis molestias voluptas similique optio beatae consequatur architecto quos fuga.</p>
+
+        </div>
+    </div>
 </body>
 </html>
