--- a/ourmission.html
+++ b/ourmission.html
@@ -7,15 +7,15 @@
 </head>
 <body>
     <div class="header">
-        <h1>Team Redemption</h1>
-    </div>
-    <div class="topnav">
-        <a href="homepage.html">Home</a>
-        <a href="ourmission.html">Our Mission</a>
-        <a href="aboutus.html">About Us</a>
-        <a href="ourpeople.html">Our People</a>
-        <a href="getinvolved.html">Get Involved</a>
-    </div>
-    <p>Our Mission:</p>
+        <a href="getinvolved.html"class="button">Get Involved</a>
+        <a href="ourpeople.html"class="button">Our People</a>
+        <a href="aboutus.html"class="button">About Us</a>
+        <a href="ourmission.html"class="button">Our Mission</a>
+        <a href="homepage.html"class="button">Home</a>
+        <div class="redemption">Team Redemption</div>
+        </div>
+    <h1 class=heading>Our Mission</h1>
+    <p class=text></p>
+    <h1 class=heading>Our Founder: Alex Long</h1>
 </body>
 </html>
