fixed the heading bar and started our mission page

--- a/getinvolved.html
+++ b/getinvolved.html
@@ -13,7 +13,8 @@
         <a href="ourmission.html"class="button">Our Mission</a>
         <a href="homepage.html"class="button">Home</a>
         <div class="redemption">Team Redemption</div>
-        </div>
+      </div>
+    <div class="top"></div>
         <h1> <br>
           <center>
             Donate 
