--- a/homepage.html
+++ b/homepage.html
@@ -14,6 +14,7 @@
         <a href="homepage.html"class="button">Home</a>
         <div class="redemption">Team Redemption</div>
         </div>
+        <div class="top"></div>
     <div class ="row">
         <div class="column">
             <img src="images/boxing1.jpg" alt="Boxing 1" style="width:100%">
