--- a/ourmission.html
+++ b/ourmission.html
@@ -14,6 +14,13 @@
         <a href="homepage.html"class="button">Home</a>
         <div class="redemption">Team Redemption</div>
         </div>
-    <p>Our Mission</p>
+        <div class="top"></div>
+
+    <div class="ourmission_container">
+      <img class='ashley' src="images/ashley.jpg" alt="pic of ashley">
+      <h2>Our Mission</h2>
+
+    </div>
+    
 </body>
 </html>
