--- a/ourpeople.html
+++ b/ourpeople.html
@@ -14,6 +14,7 @@
         <a href="homepage.html"class="button">Home</a>
         <div class="redemption">Team Redemption</div>
         </div>
+        <div class="top"></div>
       <h1 class=heading>Name</h1>
       <div class ="row">
         <div class="column">
