--- a/ourmission.html
+++ b/ourmission.html
@@ -5,7 +5,7 @@
   <title>Team Redemption</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class=back>
     <div class="header">
         <a href="getinvolved.html"class="button">Get Involved</a>
         <a href="ourpeople.html"class="button">Our People</a>
@@ -16,11 +16,7 @@
         </div>
         <div class="top"></div>
 
-    <div class="ourmission_container">
-      <img class='ashley' src="images/ashley.jpg" alt="pic of ashley">
-      <h2>Our Mission</h2>
-
-    </div>
-    
+        <h1 class=heading>Our Mission</h1>
+        
 </body>
 </html>
