minor changes for display

--- a/homepage.html
+++ b/homepage.html
@@ -41,6 +41,12 @@
     <h2 class=subheading>Strengthening Body and Mind</h2>
     <p class=text>The Team Redemption gym, located in east Baltimore, offers local elementary aged children an extracurricular activity through boxing.
         It teaches the importance of community, strength of body, and strength of mind.</p style=>
+    <div class="first">
+        <h2 class=subheading>Meet the Kids</h2>
+    </div>
+    <div class="second">
+        <h2 class=subheading>Donate Now</h2>
+    </div>
 
         <div class ="row">
             <div class="column">
