--- a/getinvolved.html
+++ b/getinvolved.html
@@ -22,6 +22,14 @@
         <h2 class=subheading> Where We Are </h2>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3087.5292157457816!2d-76.58677948521478!3d39.29892597951071!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c80465e9394f5d%3A0xf03a4fcfd3ca07cc!2s2312%20E%20Monument%20St%2C%20Baltimore%2C%20MD%2021205!5e0!3m2!1sen!2sus!4v1583257612136!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" text-align= center></iframe>
       
+      <h2 class=subheading>Submit Feedback Through the Site</h2>
+      <form action="/quotes" method="POST">
+        <input type="text" placeholder="name" name="name">
+        <input type="text" placeholder="email" name="email">
+        <input type="text" placeholder="message" name="message">
+
+        <button type="submit">Submit</button>
+    </form>
        <h2 class=subheading>Contact Us </h2>
        <p class=text2>Email: </p>
        <p class=text2>Phone Number: </p>
