div boxes in the middle of the page

--- a/homepage.html
+++ b/homepage.html
@@ -41,11 +41,19 @@
     <h2 class=subheading>Strengthening Body and Mind</h2>
     <p class=text>The Team Redemption gym, located in east Baltimore, offers local elementary aged children an extracurricular activity through boxing.
         It teaches the importance of community, strength of body, and strength of mind.</p style=>
-    <div class="first">
-        <h2 class=subheading>Meet the Kids</h2>
+    <div class="firstcontainer">
+        <div class="first">
+            <h2 class=subheading>Meet the Kids</h2>
+            <p class=textother>At its core, our organization is made by the kids and for the kids. Click the image to meet them!</p>
+            <img src="images/IMG_9417.JPG" alt="Kid" style="width:35%">
+        </div>
     </div>
-    <div class="second">
-        <h2 class=subheading>Donate Now</h2>
+    <div class="firstcontainer">
+        <div class="second">
+            <h2 class=subheading>Donate Now</h2>
+            <p class=textother>Being a non-profit, donations are very important for the maintanence and projects of Team Redemption. Therefore, donations are encouraged if our program speaks to you. Thank you for your consideration!</p>
+            <button class ="oop" onclick="window.location.href = 'https://www.gofundme.com/f/ashley039s-garden-team-redemption/donate?utm_source=widget&utm_medium=referral&utm_campaign=p_cp+share-sheet';">Click Here to Donate</button>
+        </div>
     </div>
 
         <div class ="row">
